--- a/app/globals.css
+++ b/app/globals.css
@@ -18,3 +18,8 @@ body {
   margin: 0;
   padding: 0;
 }
+.react-flow-organigrama text {
+  shape-rendering: geometricPrecision;
+  text-rendering: geometricPrecision;
+  -webkit-font-smoothing: antialiased;
+}
